/* De Vikingtyd */ Herskryverye vöär et sassiske gevööl

--- a/Vikings.mw
+++ b/Vikings.mw
@@ -74,9 +74,9 @@ Nåspöälers van de vikingtyd doot vake noordske techniken topassen vöär yser
 
 == De Vikingtyd ==
 [[Bestaand:Gokstadskipet1.jpg|thumb|right|180px|t [[Gokstadskip]] in [[Oslo]], [[Noorweagn]].]]
-De tyd tüsken de eyrstbeskreavene oavervallen in de jåren 790 töt de [[Normandiese Vereuwering|Normandiske Veröyvering]] van [[Engelaand (regio)|Engeland]] in [[1066]] wördt meysttyds de Vikingtyd nöömd. Vikingen voorden oaver de [[Noorse Zee|Noordske]] <ref>C.Michael Hogan. 2011. [http://www.eoearth.org/article/Norwegian_Sea?topic=49523 ''Norwegian Sea''. Eds.Peter Saundry & C.J.Cleveland. Encyclopedia of Earth. National Council for science and the Environment.] Washington DC </ref> en [[Baltiese Zee|Baltiske sey]] up et süden an. Normandiers stamden af van de däänske en noorske vikingen dee as in de [[10e eeuw|10. eywe]] [[feodaliteat|feodaal]] heyrskrecht hadden ekreagen in et noorden van [[Fraankriek|Frankryk]]; et gråfskop [[Normandië|Normandie]]. Sou bleef de nåwas van de Vikingen belangryk in Noordeuropa. Ouk köäning [[Harold Godwinson]], den lätsten [[Angelsassen|angelsassisken]] köäning van Engeland, had däänske vöärolden.
+De tyd tüsken de eyrstbeskreavene oavervallen in de jåren 790 töt de [[Normandiese Vereuwering|Normandiske Veröyvering]] van [[Engelaand (regio)|Engeland]] in [[1066]] wördt meysttyds de Vikingtyd nöömd. Vikingen voorden oaver de [[Noorse Zee|Noordske]] <ref>C.Michael Hogan. 2011. [http://www.eoearth.org/article/Norwegian_Sea?topic=49523 ''Norwegian Sea''. Eds.Peter Saundry & C.J.Cleveland. Encyclopedia of Earth. National Council for science and the Environment.] Washington DC </ref> en [[Baltiese Zee|Baltiske sey]] up et süden an. Normandiers stamden af van de däänske en noorske vikingen dee as in de [[10e eeuw|10. eywe]] [[feodaliteat|feodaal]] heyrskrecht hadden ekreagen in et noorden van [[Fraankriek|Frankryk]]; et gråfskop [[Normandië|Normandie]]. Sou bleav de nåwas van de Vikingen belangryk in Noordeuropa. Ouk köäning [[Harold Godwinson]], den lätsten [[Angelsassen|angelsassisken]] köäning van Engeland, had däänske vöärolden.
 
-De Vikingtyd göld neet alleyne vöär de skandinaviske landen, mär ouk vöär de gebeden dee as med herhaaldelike anvallen en kolonisaty te maken kreagen. Denkt doarby an de [[Danelaw]] in et hüdige [[Engelaand (regio)|Engeland]], med [[York|Jork]] as administrativ middelpunt van et Köäningryk [[Noordumbrië|Noordumbrie]],<ref>[http://www.englandsnortheast.co.uk/VikingNorthumbria.html "History of Northumbria: Viking era 866 AD - 1066 AD"] www.englandnortheast.co.uk.</ref> deylen van [[Mersië|Mersie]],<ref>[http://www.allempires.com/article/index.php?q=identity_self_image_viking_age_england "Identity and Self-Image in Viking Age England"] www.allempires.co.uk. October 3, 2007</ref> en [[Keuninkriek East Anglia|Oustanglie]].<ref>Toyne, Stanley Mease. [http://books.google.com/books?id=yvGt8gfBlEIC&pg=PA27&lpg=PA27&dq=Viking+Age+East+Anglia&source=bl&ots=chkBibhiGs&sig=NX79_9WHb2BL7ctaNdj1L1D93f8&hl=en&ei=f28eS-aUHovkswPr4v36CQ&sa=X&oi=book_result&ct=result&resnum=8&ved=0CCkQ6AEwBw#v=onepage&q=Viking%20Age%20East%20Anglia&f=false ''The Scandinavians in history''] Pg.27. 1970.</ref> Vikingen vünden weagen når nye landen in et noorden, ousten en westen. Hyruut ontstünden onofhankelike neadersettingen in [[Shetlaand|Shetland]], [[Orkney]] en de [[Faeröer|Faeröareilanden]], [[Ieslaand|Ysland]], [[Greunlaand|Gröönland,]]<ref>[http://www.archaeology.org/online/features/greenland/ The Fate of Greenland's Vikings], duur Dale Mackenzie Brown, ''Archaeological Institute of America'', February 28, 2000</ref> et kanadeeske [[L'Anse aux Meadows]], en ne kortstundige neadersetting in [[Newfoundland]] rund et jår [[1000]].<ref>[http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=16331154&query_hl=3&itool=pubmed_docsum The Norse discovery of America]</ref> Vöäral Gröönland en Ysland künnet oorsprungelik untdekked weasen döär seelüde dee as uut kuurs ewaid warren. Ouk künnet se med upset upsöcht weasen, wellicht nå verhalen van seylüde dee as land in de verte seen hadden. De neadersetting in Greunland störv nåderhande uut, möägelikerwys döär [[klimaatveraandering|klimaatverandering]]. Vikingen deaden ouk slaviske gebeden verkennen en oaverneamen in [[Oost-Europa|Ousteuropa]], vöäral de [[Kievan Rus|Kyvan Rus]]. Teagen 950 nå Kristus warren disse neadersettings groutendeels döär de slavisken oavernöämen.
+De Vikingtyd göld neet alleyne vöär de skandinaviske landen, mär ouk vöär de gebeden dee as med herhaaldelike anvallen en kolonisaty te maken kreagen. Denkt doarby an de [[Danelaw]] in et hüdige [[Engelaand (regio)|Engeland]], med [[York|Jork]] as administrativ middelpunt van et Köäningryk [[Noordumbrië|Noordumbrie]],<ref>[http://www.englandsnortheast.co.uk/VikingNorthumbria.html "History of Northumbria: Viking era 866 AD - 1066 AD"] www.englandnortheast.co.uk.</ref> deylen van [[Mersië|Mersie]],<ref>[http://www.allempires.com/article/index.php?q=identity_self_image_viking_age_england "Identity and Self-Image in Viking Age England"] www.allempires.co.uk. October 3, 2007</ref> en [[Keuninkriek East Anglia|Oustanglie]],<ref>Toyne, Stanley Mease. [http://books.google.com/books?id=yvGt8gfBlEIC&pg=PA27&lpg=PA27&dq=Viking+Age+East+Anglia&source=bl&ots=chkBibhiGs&sig=NX79_9WHb2BL7ctaNdj1L1D93f8&hl=en&ei=f28eS-aUHovkswPr4v36CQ&sa=X&oi=book_result&ct=result&resnum=8&ved=0CCkQ6AEwBw#v=onepage&q=Viking%20Age%20East%20Anglia&f=false ''The Scandinavians in history''] Pg.27. 1970.</ref> Yrland, de laege landen en de heyle noordseyküste. Vikingen vünden weagen når nye landen in et noorden, ousten en westen. Hyruut ontstünden onafhangelike neadersettingen in [[Shetlaand|Shetland]], [[Orkney]] en de [[Faeröer|Faeröareilanden]], [[Ieslaand|Ysland]], [[Greunlaand|Gröönland,]]<ref>[http://www.archaeology.org/online/features/greenland/ The Fate of Greenland's Vikings], duur Dale Mackenzie Brown, ''Archaeological Institute of America'', February 28, 2000</ref> et kanadeeske [[L'Anse aux Meadows]], en ne kortstundige neadersetting in [[Newfoundland]] rund et jår [[1000]].<ref>[http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=pubmed&dopt=Abstract&list_uids=16331154&query_hl=3&itool=pubmed_docsum The Norse discovery of America]</ref> Vöäral Gröönland en Ysland künnet oorsprungelik untdekked weasen döär seelüde dee as uut kuurs ewaid warren. Ouk künnet se med upset upsöcht weasen, wellicht nå verhalen van seylüde dee as land in de verte seen hadden. De neadersetting in Gröönland störv nåderhande uut, möägelikerwys döärdat et weagens [[klimaatveraandering|klimaatverandering]] neet länger bewoanbår was. Vikingen deaden ouk slaviske gebeden verkennen en oaverneamen in [[Oost-Europa|Ousteuropa]], vöäral de [[Kievan Rus|Kyvan Rus]]. Teagen 950 nå Kristus warren disse neadersettings groutendeels döär de slavisken oavernöämen.
 
 === Vikingopkumst ===
 [[Bestaand:Viking Expansion.svg|thumb|right|330px|Kaarte med Skandinaviske neadersettings in den [[8e eeuw|8sten]] (dungerrood), [[9e eeuw|9den]] (rood), [[10e eeuw|10den]] (oranje), en [[11e eeuw|11den eywe]] (gel). De greune gebeden wörden regelmåtig plunderd döär de Vikings]] 
@@ -96,13 +96,13 @@ In [[Neerlaand|Neaderland]] is vöäral nen anval van de Vikingen up [[Dorestad]
 In [[836]] wör [[Antwaarpn|Antwarpen]] platbrandt. Ouk warren der völle junge kearls uut [[Freeslaand|Freesland]] en de sassiske gebeden dee as sik mangs anmelden üm med te gån.<ref>[http://www.historisch-openluchtmuseum-eindhoven.nl/vikingen/vikingen-algemeen/nederland.html Historisch Openluchtmuseum Eindhoven - Vikingen in Nederland] Bekekn op 2 okt 2011</ref><ref>Jan de Vries (1923): De Wikingen in de lage landen bij de zee. Haarlem, 430 pp.</ref><ref>Annemarieke Willemsen (2004): Vikingen! Overvallen in het stroomgebied van Rijn en Maas, 800 – 1000. Utrecht, ISBN 90-6868-367-5, 191 pp.</ref>
 
 === Eande van de Vikingtyd ===
-In de Vikingtyd reisden völle skandinaviske kearls en vrouwlüde når völle deylen van Europa en vearder. Van disse kulturele diaspora sint oaverblyvsels te vinden van [[Newfoundland]] töt [[Byzantium|Bysantium]]. Disse reisetyd had skoonwal ouk völle invlood up de achterblyvers in skandinavie, dee as underwyl völle metmakeden.<ref>Roesdahl, pp. 295-7</ref> In de 300 jår van de Vikingtyd veranderen der in Skandinavië self onmündig völle wat kultuur angeyt. 
+In de Vikingtyd tröäken skandinaviske lüde heyl Europa en wyder döär. Disse kulturele diaspora is te verneamen in oaverblyvsels van [[Newfoundland]] töt [[Byzantium|Bysantium]]. Mär ouk de achterblyvers in skandinavie makeden underwyl vöäle medmakeden.<ref>Roesdahl, pp. 295-7</ref> 
 
-An et eande van den [[11e eeuw|11den eywe]] warren der keuninklike femilys an de macht dee as goodkuring hadden van de [[Rooms-Katholieke Karke|Rooms-Katholyke Karke]], en dee regearden med aal starkeren hand. De dree keuninkryken [[Denemaarken|Dänemarken]], [[Noorweagn|Noorwea]]<nowiki/>gen en sweyden warren ontstån. der onstünden steaden dee as woarken as sekulyre en geestelike administratyve middelpeunten en moarktplekn, en der onstünden [[ekonomie|ekonomyn]] baseerd up [[geld|geeld]], når [[Groot-Brittanje|Brits]] en [[Duutslaand|Duuts]] model.<ref>Gareth Williams, 'Kingship, Christianity and coinage: monetary and political perspectives on silver economy in the Viking Age', in ''Silver Economy in the Viking Age'', ed. James Graham-Campbell and Gareth WIlliams, pp. 177-214; ISBN 978-1-59874-222-0</ref> teagen disse tyd was der al mear as den eywe gin silver mear uut de Islamitiske landen kümmen, en et silver uut Engeland köm vanof middel-11den eywe ouk nit mear.<ref>Roesdahl, pp. 296</ref> et kristendom had in Dänemarken en Noorweagen vasten grund kreagen döär de kumst van diocessen. et Nye geleuf begun sik te organiseeren en an te dringen in sweeden. Buutnlandske koarklüde en inheemse adel hadden belang by de veardere uutwyding van et kristendom, wat in Skandinavië nit allene mear up seandingswoark baseerd was. Oolde denkwysn en leavensstylen warren an et veranderen. Et duurden skoonwal nog töt [[1103]] at et eyrste Eardsbisskopryk sticht wör in [[Lund]], in den südeliken tip van Sweyden.
+An et eande van den [[11e eeuw|11. eywe]] warren der köäninglike femilys an de macht dee as goodköäring hadden van de [[Rooms-Katholieke Karke|Roomskkatholike Karke]], en dee regearden med al starkeren hand. De dree köäningryken [[Denemaarken|Dänemarken]], [[Noorweagn|Noorwea]]<nowiki/>gen en Sweyden warren ontstån. Geystelike, ekonomiske en administrative middenpunten stünden up. En nå eywen van handel in den förm van uuttuusken küm der voordan vaker [[geld]] an te passe, når [[Groot-Brittanje|britsk]] en [[Duutslaand|düütsk]] model.<ref>Gareth Williams, 'Kingship, Christianity and coinage: monetary and political perspectives on silver economy in the Viking Age', in ''Silver Economy in the Viking Age'', ed. James Graham-Campbell and Gareth WIlliams, pp. 177-214; ISBN 978-1-59874-222-0</ref> Teagen disse tyd was der al meyr as en eywe gin silver meyr uut de [[Islam|islamitiske]] landen kümmen, en silver uut Engeland köm vanaf et midden van den 11. eywe ouk nit meyr.<ref>Roesdahl, pp. 296</ref> Et kristendom had in Dänemarken en Noorweagen vasten grund kreagen med de stichting van de eyrste diocessen, en in Sweyden begünde et nye gelöyv sik ouk te organiseren en an te dringen. Butenlandske karkenlüde en inheymsken adel hadden belang by de wydere uutwyding van et kristendom, wat in Skandinavie nit alleane meyr up sendingswark baseerd was. Olde denkwysen en leavensstylen warren an et veranderen. Et duurden skounwal noch töt [[1103]] at et eyrste årtsbisskopryk stichted wör in [[Lund]], in den südeliken tip van Sweyden.
 [[Bestaand:Blair A'Bhuailte and Loch Leum na Luirginn.jpg|thumb|[[Kilmuir, Skye|Blar a' Bhuailte]], Leste Vikingplek in [[Skye]]]] 
-De upname van de vrogere Skandinaviske köäningryken in de grote kulturele streum van et Europese kristendom maaken at de Skandinaviske hearsers en seevearders andere belangen kreegn, en öare betrekkings med öare nåbers wysigen. Eyne van de höyvdwellen van de Vikingen was [[Slawerieje|slavendryven]]. De middeleywske karke nöm de stelling dat Kristenen nooit medekristenen as slaaf mochen hebn, wårdöär't lyfslawerye minder wör in Noord Europa. Hyrdöär was der minder te verdeenn an de oavervallen, mär of en to wörden der in den 11den eywe nog slaaven maakt. uuteindelik wör rechte slawerye verböaden, en vervöngen döär dynstknechtskop as leegste klasse in de middeleywske måtskoppye. Skandinaviske plundering in Kristelike gebeden rundum de [[Noordzee|Noord]]<nowiki/>sey en [[Ierse zee|yrske]] sey wör beduudend minder.
+De vrogere Skandinaviske köäningryken güngen up in de groute kulturele ströyming van et europeeske kristendom. Skandinaviske heyrskers en seyvårders kreagen andere belangen en güngen anders med öäre nåbers ümme. Eyne van de vöärnaamste brunnen van inkumsten van de vikingen was [[Slawerieje|slavendryven]]. De middeleywske karke nöm de stelling dat kristenen nooit andere kristenen as slave kunden hebben. Lyveigenskap wör minder in Noordeuropa. Oavervallen leyverden minder up. Mär heyl af en to wörden der in den 11. eywe nog slaven evüngen. Uuteindelik wör rechte slavendryverye verböäden, en vervöngen döär deenstknechtskap as laegste klasse in de middeleywske måtskoppye. Skandinaviske plündering in Kristelike gebeden rundüm de [[Noordzee|Noordsey]] en [[Ierse zee|Yrske sey]] wör bedüdend minder.
 
-De Noorse köäningen bleaven öare macht uutuufenen in deylen van et noorden van grout-Brittanje en [[Ierlaand (eilaand)|Yrland.]] oavervallen bleaven döärgån töt in den [[12e eeuw|12den eywe]]. mär de Skandinaviske hearses warren vanof dee tyd richt up andere duullen. In [[1107]] seilen [[Sigurd I van Noorweagn|Sigurd I van Noorwea]]<nowiki/>gen når et Middenousten üm te vechten vöär et nye [[Keuningriek Jeruzalem|köäningryk Jerusalem]], en de dänen en sweyden deaden fanatik med an de [[Baltiese Kruustochtn|Baltiske Kruustoch]]<nowiki/>ten in de 12de en [[13e eeuw|13de eyween]].<ref>The Northern Crusades: Second Edition by Eric Christiansen; ISBN 0-14-026653-4</ref>
+De noordske köäningen bleaven öaren macht döärdryven in deylen van Noordbrittanie en [[Ierlaand (eilaand)|Yrland.]] Oavervallen bleaven döärgån töt in den [[12e eeuw|12. eywe]]. Mär de skandinaviske hearskers hadden vanaf dee tyd andere plannen. In [[1107]] seilden [[Sigurd I van Noorweagn|Sigurd I van Noorweagen]] når et middenousten üm te vechten vöär et nye [[Keuningriek Jeruzalem|köäningryk Jerusalem]], en de dänen en sweyden deaden fanatik med an de [[Baltiese Kruustochtn|Baltiske Kruustochten]] in de 12. en [[13e eeuw|13. eywen]].<ref>The Northern Crusades: Second Edition by Eric Christiansen; ISBN 0-14-026653-4</ref>
 
 == Wåpens en oorlogsvoring ==
 Unse kennis oaver woapens en beskoarming uut de Vikingtyd is baseerd up rellatyf weinige archeologiske vündste, ofbealdingen en vöär den deel up de verhalen uut de Noordse Sages en Noordse weten dee as up wörden eskreeven in den 13den eywe.
@@ -139,7 +139,7 @@ t Romantiseerde beald van de Vikingen wat döär gelearde en gewone kringe wör 
 
 Döär de upera's van den Duutsen musikskryver [[Richard Wagner]], sou as ''[[Der Ring des Nibelungen]]'', kümmen döär de Vikingen en de Romantike Vikingopleawing völle kreatyve warken up de wearld. Doarunder vaalt böke dee as rechtstreeks baseerd sint up historiske gebuurtenisse, sou as [[Frans Gunnar Bengtsson]]'s ''De Langskepe'' (den as in 1963 verfilmd wör), en historiske fantasyvoarke sou as de film ''The Vikings'' uut [[1958]], [[Michael Crichton]] sin ''Eaters of the Dead'' (Doodenetters), den as verfilmd wör as ''The 13th Warrior'' en de kumedyfilm ''Erik The Viking''. den Vampyr ''Eric Northman'' in de HBO Tv-sery ''[[True Blood]]'' was nen Vikingpreens vöär at he in vampyr wör veranderd. Vikingen kumt vöär in verskeidene böke van de däänsk-Amerikanse skryver [[Poul Anderson]], en den [[Groot-Brittanje|britsken]] verkenner, geskeedkündigen en skryver [[Tim Severin]] skreef ne trilogy in 2005 oaver nen jungen Viking Thorgils Leifsson, den as üm de wearld reisden.
 
-Sind de jåren '60 is der nen upkumst van [[histories noaspöln|historys nåspöllen]]. Skoonwal de eyrste grupen weinig te doon hadden med historiske getrouwheid, is dår in latere jåren aal mear andacht vöär kümmen. De grötste nåspölgrupen sint [[The Vikings (noaspölgroep)|The Vikings]] en [[Regia Anglorum]], mär der bestoat heel völle kleindere grupen in Europa, [[Noord-Amerika]], [[Niej Zeelaand|Ny seeland]] en [[Australi'je (land)|Australië]]. Völle van disse grupen doot med in leavensechte gevechtn, en wat hebt der selfs Vikingskepe of -bootn.
+Sind de jåren '60 is der nen upkumst van [[histories noaspöln|historys nåspöllen]]. Skoonwal de eyrste grupen weinig te doon hadden med historiske getrouwheid, is dår in latere jåren aal meyr andacht vöär kümmen. De grötste nåspölgrupen sint [[The Vikings (noaspölgroep)|The Vikings]] en [[Regia Anglorum]], mär der bestoat heel völle kleindere grupen in Europa, [[Noord-Amerika]], [[Niej Zeelaand|Ny seeland]] en [[Australi'je (land)|Australië]]. Völle van disse grupen doot med in leavensechte gevechtn, en wat hebt der selfs Vikingskepe of -bootn.
 
 Moderne rekonstruksys van [[Vikingmythologie|Vikingmytology]] hebt voordan invlood had in de latere 20ste en vroge 21ste-eywese popkultuur in wat landen, sou as in [[stripverhaal|strips]], rollenspölle, kumpjuterspölle en musik, wårunder [[Viking Metal]], wat ne undersoort is van [[Metal (muziek)|Heavy Metalmusik]].
 
@@ -170,9 +170,9 @@ De dänen dee as in Engeland woanden wörden oaverdreeven skoon neumd döär öa
 vöär de oustelike Vikingen geldet at [[Ibn Rustah|Ibben Rustah]] upmarket at se skoon warren en skone kleare an hadden, terwyl [[Ibn Fadlan|Ibben Fadlan]] gruuselt van de gewoonte at elken moaren alle kearls den selfden emmer water bruukt üm et gesichte te wasken en de neuse med te snuuten. Ibben Fadlan's ofkear is te verklåren döär de teagenstelling med de [[Islam|moslimvöärskriften vöär perseunlike versörging]], wat vöärskrif at der skone watervaaten en streumend water bruukt mosn worden. Skoonwal sinne beskryving sin ofkear mut uutdrukn, gef et ouk an at de Vikingen sik elken moaren wasken.
 
 === Genetiske nålåtnskop ===
-underseuk når [[genetiese verskeaidenheaid|genetiske verskeidenheid]] gef wat insicht in den oorsprung en uutbreiding van de Vikingbevolking. De [[Haplogroep I1 (Y-DNA)|Haplogruup I1]] (herkenbår an bepålde [[genetiese markering|genetiske markering]]s up et Y-chromosoom) wörd mangs ouk wal de "Vikinghaplogruup" neumd. Disse vervörming kümt et meeste vöär under Skandinaviske manleu: 35 perseant in Noorweagn, Deanemarken en sweeden, en nen pyk van 40 perseant in west Finland.<ref>[http://www.doi.org/10.1111/j.1469-1809.2007.00429.x Annals of Human Genetics. Volume 72 Issue 3 Pages 337–348, May 2008]</ref> et kümt ouk völle vöär rund de suud-Baltiske en [[Noordzee|Noordsee]]kuste, en wörd heanig an minder de mear a'j når et suuden goat.
+underseuk når [[genetiese verskeaidenheaid|genetiske verskeidenheid]] gef wat insicht in den oorsprung en uutbreiding van de Vikingbevolking. De [[Haplogroep I1 (Y-DNA)|Haplogruup I1]] (herkenbår an bepålde [[genetiese markering|genetiske markering]]s up et Y-chromosoom) wörd mangs ouk wal de "Vikinghaplogruup" neumd. Disse vervörming kümt et meeste vöär under Skandinaviske manleu: 35 perseant in Noorweagn, Deanemarken en sweeden, en nen pyk van 40 perseant in west Finland.<ref>[http://www.doi.org/10.1111/j.1469-1809.2007.00429.x Annals of Human Genetics. Volume 72 Issue 3 Pages 337–348, May 2008]</ref> et kümt ouk völle vöär rund de suud-Baltiske en [[Noordzee|Noordsee]]kuste, en wörd heanig an minder de meyr a'j når et suuden goat.
 
-Genundersöken up de [[Britse Eilaandn|britske Ei]]<nowiki/>landen van et [[Y-DNA|Y-denA]] [[Haplogroep|Haplogruup]] [[R1a1]], wat ouk völle in Skandinavië vöärkümt, wis uut dat de Vikingen In Brittanje en yrland kümmen te wonn, nöast at se der plunderen deaden. sowal mannelike as vröwwelike ofstammingsstudys wyst Noorse ofstamming uut in gebeden dee as et dichtste by Skandinavië lignt, sou as de Shetland- en [[Orkney-eilaandn|Orkney-eilanden]]. Inwonners van landen vearderop låtet mear Noorse ofstamming seen in mannelike [[Y chromosoom|Y chromosoomlynn]].<ref>[http://www.telegraph.co.uk/news/uknews/1487303/Vikings-who-chose-a-home-in-Shetland-before-a-life-of-pillage.html Roger Highfield, "Vikings who chose a home in Shetland before a life of pillage"], ''Telegraph'', 7 Apr 2005, bekekn op 16 Nov 2008</ref>
+Genundersöken up de [[Britse Eilaandn|britske Ei]]<nowiki/>landen van et [[Y-DNA|Y-denA]] [[Haplogroep|Haplogruup]] [[R1a1]], wat ouk völle in Skandinavië vöärkümt, wis uut dat de Vikingen In Brittanje en yrland kümmen te wonn, nöast at se der plunderen deaden. sowal mannelike as vröwwelike ofstammingsstudys wyst Noorse ofstamming uut in gebeden dee as et dichtste by Skandinavië lignt, sou as de Shetland- en [[Orkney-eilaandn|Orkney-eilanden]]. Inwonners van landen vearderop låtet meyr Noorse ofstamming seen in mannelike [[Y chromosoom|Y chromosoomlynn]].<ref>[http://www.telegraph.co.uk/news/uknews/1487303/Vikings-who-chose-a-home-in-Shetland-before-a-life-of-pillage.html Roger Highfield, "Vikings who chose a home in Shetland before a life of pillage"], ''Telegraph'', 7 Apr 2005, bekekn op 16 Nov 2008</ref>
 
 Ne spesjaliseerde achternaamstudy in [[Liverpool]] löät völ Noorske ofstamming seen. sowat 50 perseant van kearls dee as by familys heurden dee as der al vöär de industrialisaty woanden, warren van Noorse ofkumst.<ref>[http://mbe.oxfordjournals.org/cgi/content/full/25/2/301?ijkey=jUXWdH8qRJ9j6mF&keytype=ref Excavating Past Population Structures by Surname-Based Sampling; The Genetic Legacy of the Vikings in Northwest England, Georgina R. Bowden et al., Molecular Biology and Evolution, 20 November 2007]</ref> Hoge persentasys van Noorse ofstamming (vünden döär r1a1 haplotype markerings) wörden ouk vünden under manlüde uut [[Wirral skiereilaand|Wirral]] en [[West-Lancashire]].<ref>[http://www.familytreedna.com/pdf/capelli2_CB.pdf A Y Chromosome Census of the British Isles, Capelli et al., Current Biology, Vol. 13, May 27, 2003]</ref> Dit was te vergelyken med et persentasy Noorse ofstamming under manlüde up de Orkney-eilanden.<ref>[http://www.guardian.co.uk/uk/2007/dec/03/britishidentity.jamesranderson James Randerson, "Proof of Liverpool's Viking past"], ''The Guardian'', 3 Dec 2007, bekekn op 16 Nov 2008</ref>
 
