/* Wåpens en oorlogsvoring */

--- a/Vikings.mw
+++ b/Vikings.mw
@@ -72,7 +72,7 @@ Andere voartuuge, vake nåbouwsels van et [[Gokstadskip]] (Volledige of halve sk
 
 Nåspöälers van de vikingtyd doot vake noordske techniken topassen vöär ysersmelten en bewarken.<ref>http://www.warehamforge.ca/ENCAMPMENT/smelting.html</ref>
 
-== De Vikingtyd ==
+== De vikingtyd ==
 [[Bestaand:Gokstadskipet1.jpg|thumb|right|180px|t [[Gokstadskip]] in [[Oslo]], [[Noorweagn]].]]
 De tyd tüsken de eyrstbeskreavene oavervallen in de jåren 790 töt de [[Normandiese Vereuwering|Normandiske Veröyvering]] van [[Engelaand (regio)|Engeland]] in [[1066]] wördt meysttyds de Vikingtyd nöömd. Vikingen voorden oaver de [[Noorse Zee|Noordske]] <ref>C.Michael Hogan. 2011. [http://www.eoearth.org/article/Norwegian_Sea?topic=49523 ''Norwegian Sea''. Eds.Peter Saundry & C.J.Cleveland. Encyclopedia of Earth. National Council for science and the Environment.] Washington DC </ref> en [[Baltiese Zee|Baltiske sey]] up et süden an. Normandiers stamden af van de däänske en noorske vikingen dee as in de [[10e eeuw|10. eywe]] [[feodaliteat|feodaal]] heyrskrecht hadden ekreagen in et noorden van [[Fraankriek|Frankryk]]; et gråfskop [[Normandië|Normandie]]. Sou bleav de nåwas van de Vikingen belangryk in Noordeuropa. Ouk köäning [[Harold Godwinson]], den lätsten [[Angelsassen|angelsassisken]] köäning van Engeland, had däänske vöärolden.
 
@@ -95,7 +95,7 @@ In [[Neerlaand|Neaderland]] is vöäral nen anval van de Vikingen up [[Dorestad]
 
 In [[836]] wör [[Antwaarpn|Antwarpen]] platbrandt. Ouk warren der völle junge kearls uut [[Freeslaand|Freesland]] en de sassiske gebeden dee as sik mangs anmelden üm med te gån.<ref>[http://www.historisch-openluchtmuseum-eindhoven.nl/vikingen/vikingen-algemeen/nederland.html Historisch Openluchtmuseum Eindhoven - Vikingen in Nederland] Bekekn op 2 okt 2011</ref><ref>Jan de Vries (1923): De Wikingen in de lage landen bij de zee. Haarlem, 430 pp.</ref><ref>Annemarieke Willemsen (2004): Vikingen! Overvallen in het stroomgebied van Rijn en Maas, 800 – 1000. Utrecht, ISBN 90-6868-367-5, 191 pp.</ref>
 
-=== Eande van de Vikingtyd ===
+=== Eande van de vikingtyd ===
 In de Vikingtyd tröäken skandinaviske lüde heyl Europa en wyder döär. Disse kulturele diaspora is te verneamen in oaverblyvsels van [[Newfoundland]] töt [[Byzantium|Bysantium]]. Mär ouk de achterblyvers in skandinavie makeden underwyl vöäle medmakeden.<ref>Roesdahl, pp. 295-7</ref> 
 
 An et eande van den [[11e eeuw|11. eywe]] warren der köäninglike femilys an de macht dee as goodköäring hadden van de [[Rooms-Katholieke Karke|Roomskkatholike Karke]], en dee regearden med al starkeren hand. De dree köäningryken [[Denemaarken|Dänemarken]], [[Noorweagn|Noorwea]]<nowiki/>gen en Sweyden warren ontstån. Geystelike, ekonomiske en administrative middenpunten stünden up. En nå eywen van handel in den förm van uuttuusken küm der voordan vaker [[geld]] an te passe, når [[Groot-Brittanje|britsk]] en [[Duutslaand|düütsk]] model.<ref>Gareth Williams, 'Kingship, Christianity and coinage: monetary and political perspectives on silver economy in the Viking Age', in ''Silver Economy in the Viking Age'', ed. James Graham-Campbell and Gareth WIlliams, pp. 177-214; ISBN 978-1-59874-222-0</ref> Teagen disse tyd was der al meyr as en eywe gin silver meyr uut de [[Islam|islamitiske]] landen kümmen, en silver uut Engeland köm vanaf et midden van den 11. eywe ouk nit meyr.<ref>Roesdahl, pp. 296</ref> Et kristendom had in Dänemarken en Noorweagen vasten grund kreagen med de stichting van de eyrste diocessen, en in Sweyden begünde et nye gelöyv sik ouk te organiseren en an te dringen. Butenlandske karkenlüde en inheymsken adel hadden belang by de wydere uutwyding van et kristendom, wat in Skandinavie nit alleane meyr up sendingswark baseerd was. Olde denkwysen en leavensstylen warren an et veranderen. Et duurden skounwal noch töt [[1103]] at et eyrste årtsbisskopryk stichted wör in [[Lund]], in den südeliken tip van Sweyden.
@@ -105,9 +105,9 @@ De vrogere Skandinaviske köäningryken güngen up in de groute kulturele ströy
 De noordske köäningen bleaven öaren macht döärdryven in deylen van Noordbrittanie en [[Ierlaand (eilaand)|Yrland.]] Oavervallen bleaven döärgån töt in den [[12e eeuw|12. eywe]]. Mär de skandinaviske hearskers hadden vanaf dee tyd andere plannen. In [[1107]] seilden [[Sigurd I van Noorweagn|Sigurd I van Noorweagen]] når et middenousten üm te vechten vöär et nye [[Keuningriek Jeruzalem|köäningryk Jerusalem]], en de dänen en sweyden deaden fanatik med an de [[Baltiese Kruustochtn|Baltiske Kruustochten]] in de 12. en [[13e eeuw|13. eywen]].<ref>The Northern Crusades: Second Edition by Eric Christiansen; ISBN 0-14-026653-4</ref>
 
 == Wåpens en oorlogsvoring ==
-Unse kennis oaver woapens en beskoarming uut de Vikingtyd is baseerd up rellatyf weinige archeologiske vündste, ofbealdingen en vöär den deel up de verhalen uut de Noordse Sages en Noordse weten dee as up wörden eskreeven in den 13den eywe.
+Der sint mär weinig wåpens en lyfsbeskarming evünden uut de vikingtyd. Dårdöär is der weinig oaver bekend. Deyls müt de geleyrden afgån up verhalen en olde teykeningen uut de noordske sagen en wetten dee as wörden upeskreaven in den 13. eywe.
 
-når gebruuk warren alle vrye Noordse kearls verplicht woapens te hebn, en möägen se aaltyd by sik dreagen. De woapens gavn ouk nen Viking's sosjale stoatus an: nen ryken Viking had ne kumplete uutrösting van [[helm]], [[skeeld]], [[maliënkolder]] en sweard. nen typysen ''bóndi'' (vryen man) vöchten earder med nen [[spear]] en skeeld, en völle hadden ouk meestal nen [[saks]] by sik as hulpmes. [[Pieleboge|Boa]]<nowiki/>gen wörden vake bruukt an et begin van landgevechten en up see, mär wörden vake seen as minder earvol as handwoapns. Vikingen warren bysünder in öaren tyd, umdat se [[akse]]n gebröäken as höyvdwoapen. De [[Húscarls]] (''huuskearls''), de elitelyfwacht van köäning [[Knoet|Knuut]] (en later [[Harold Godwinson|köäning Harold II]]), hadden tweehandige aksen wårmed se med gemak skeelden en metaallene helme konn döärhouwen.
+Når gebruuk warren alle vrye noordske kearls verplicht woapens te hebn, en möägen se aaltyd by sik dreagen. De woapens gavn ouk nen Viking's sosjale stoatus an: nen ryken Viking had ne kumplete uutrösting van [[helm]], [[skeeld]], [[maliënkolder]] en sweard. nen typysen ''bóndi'' (vryen man) vöchten earder med nen [[spear]] en skeeld, en völle hadden ouk meestal nen [[saks]] by sik as hulpmes. [[Pieleboge|Boa]]<nowiki/>gen wörden vake bruukt an et begin van landgevechten en up see, mär wörden vake seen as minder earvol as handwoapns. Vikingen warren bysünder in öaren tyd, umdat se [[akse]]n gebröäken as höyvdwoapen. De [[Húscarls]] (''huuskearls''), de elitelyfwacht van köäning [[Knoet|Knuut]] (en later [[Harold Godwinson|köäning Harold II]]), hadden tweehandige aksen wårmed se med gemak skeelden en metaallene helme konn döärhouwen.
 
 == Nålåtenskop ==
 === Middeleywsk denken oaver vikingen ===
