/* t Beeld van de Viking in 20ste-eywese politik */

--- a/Vikings.mw
+++ b/Vikings.mw
@@ -132,8 +132,8 @@ De fascinaty vöär Vikingen küm an et höygdepünt tydens de sounöömde [[Vik
 
 Töt vöär korten tyd was de geskedenisse van de vikingtyd vöäral baseerd up de yslandske sages, de däänske geskedenisse van [[Saxo Grammaticus]], den [[Ruslaand|russisken]] [[Eerstn kroniek|eyrsten kronik]] en den [[Oorlog van de Iern met de Vrömden|Oorlog van de Yren med de Vrömden]]. Noch mär weinig geleyrden seet disse tekste as betrouwbår. De meyste geskeedkündigen verlåtet sik up archeology en [[numismatiek|numismatik]], wat waerdevolle bydreages hebbet eleyverd an begrip oaver dee tyd.<ref>[http://books.google.com/books?id=AXzrQvv51tEC&dq The Oxford Illustrated History of the Vikings duur Peter Hayes Sawyer] ISBN 0-19-820526-0</ref>
 
-==== t Beeld van de Viking in 20ste-eywese politik ====
-t Romantiseerde beald van de Vikingen wat döär gelearde en gewone kringe wör emaakt in noorwestelik Europa in den 19den en vrog-20sten eywe was stark, en et Vikingfiguur wör den bekeand en bruukbår symbool in verskillende umstandigheeden in de politik en politike ideologyn.<ref>Hall, pp. 220–1; Fitzhugh and Ward, pp. 362–64</ref> In [[Normandië]], wat döär de Vikingen was koloniseerd, wör et Vikingskip den völgebruukt regionaal symbool. In Duutsland wör de gewoarwording van Vikinggeskydenisse heugerop hulpen döär den 19de-eywes greansverskel med Deanemarken oaver [[Sleeswiek-Holstain|Sleeswyk-Holsteen]] en et gebruuk van Skandinaviske mytology döär Richard Wagner. et uphemmelde beald oaver Vikingen stünd anhangers van germaanse oaverheyrsking wal an, en se veranderen et beald van de Viking når öare weunsk van et germaanse upperras.<ref>Fitzhugh and Ward, p. 363</ref> döär de sproake en kulturele oaveringumste tüsken Noordsspreknde Skandinaviërs en andere germaanse grupen wörden Skandinaviske Vikingen in [[Naziduutslaand|Nasiduutsland]] ofbealdt as et puurste germaans. et Kulturele fenomeen van de Vikinggröai wör vannys beskouwd vöär gebruuk as propaganda üm et onmündig militante nationalisme van et [[Daarde Riek|Daarde Ryk]] te understönn. andere politike organisatys van et selfde gedachtegood, sou as de vrogere Noorske fascistiske partye [[Nasjonal Samling]], gebröäken up ne selfde wiske ellemeanten van de Moderne Vikingmythe in öare symbolyk en propaganda. In [[Kommunisme|kummunistys]] [[Ruslaand|Rusland]] leiden de ideologye van Slawiske raspuurheid töt den kumpleet oontkenn van den Skandinavys andeel in et ontstån van de [[Rusleu]], dee as volgens de kummunisten uut de Slawiske lüde ontstån warren. Bewiske vöär et teagendeel wörden töt 1990 underdrukt en achterheulden. De stad Novgorod löp rechtevoort te koop med öare Vikingsgeskydenisse en hef den Vikingskip in et stadswoapen up låten neamen.<ref>Hall, pp. 221</ref>
+==== Et beald van de viking in 20.-eywske politik ====
+Et verromantiseerde beald van de vikingen wör in den 19. en 20. eywe voordan herhaald. Et vikingfiguur wör en bekend en bruukbår symbool in verskillende politike ideologien.<ref>Hall, pp. 220–1; Fitzhugh and Ward, pp. 362–64</ref> In [[Normandië|Normandie]], wat döär de vikingen was koloniseerd, wör et vikingskip en völgebruukt regionaal symbool. In düütskland kreag de vikinggeskedenisse weader meyr andacht by en 19.-eywsk grensverskel med Dänemarken oaver [[Sleeswiek-Holstain|Sleeswyk-Holsteyn]] en et gebruuk van skandinaviske mytology döär Richard Wagner. Et uphemmelde beald van krachtige germaanske krygers stünd anhangers van germaanse oaverheyrsking wal an. See makeden der van dat vikingen vöärbealden warren van en germaansk upperras.<ref>Fitzhugh and Ward, p. 363</ref> Döär de språke en kulturele oavereynkumste tüsken noordsk-spreakende skandinaviers en andere germaanske grupen wörden skandinaviske vikingen in [[Naziduutslaand|Nazidüütskland]] afbealded as et puurste germaansk. De vikingtyd en byhöyrende uutbreidingsdrang wör gebruked as propaganda üm et unmündig militante nationalisme van et [[Daarde Riek|Darde Ryk]] te understöänen. Andere politike organisatys med et selfde gedachtegood, sou as de vrogere Noorske Fascistiske Partye, [[Nasjonal Samling]], gebröäken up ne selvde wyse elementen van de Moderne Vikingmyhe in öare symbolik en propaganda. In [[Kommunisme|kommunistisk]] [[Ruslaand|Rusland]] leiden de ideology van slaviske raspuurheid töt et kumpleet untkennen van et skandinavisken andeyl in et ontstån van de [[Rusleu]]. Bewyse vöär et teagendeyl wörden töt 1990 underdrükked en achterhölden. De stad Novgorod löpt rechtevoort te koup med öäre vikingsgeskedenisse en hevt en vikingskip in et stadswåpen up låten neamen.<ref>Hall, pp. 221</ref>
 
 === Vikingen in de moderne musik, skryverye en popkultuur ===
 
