--- a/Drèentse_taolwiezer.mw
+++ b/Drèentse_taolwiezer.mw
@@ -1,6 +1,7 @@
 Dit is een '''Drèentse taolwiezer'''. Dinger die as hierin staot, bint: grammatica, algemiene woorden en zegswiezen.
 
-''Zie ok 't artikel aover 't [[Drèents]].''<br /><br />
+''Zie ok 't artikel aover 't [[Drèents]].''
+
 
 == Info veurof ==
 't Drèents hef verschillende heufdindielings, en wördt wal eziene as alle dialecten die as ze ien [[Drenthe]] praot. De dialecten ien 't noordoosten van de pervincie wördt ok wal as [[Grunnegs|Grunnings]] eziene, en die van een diel van 't westen as [[Stellingwarfs]].
@@ -769,7 +770,7 @@ Regels veur de teengwoordige tied:
 |In de '''biester''' weden<br />''(Ik binne hielemaole ien de biester)''
 |In de war / in verlegenheid weden
 |-
-|Die zien gepraot en vief '''cent''', dan he'j net een stuver<br />''
+|Die zien gepraot en vief '''cent''', dan he'j net een stuver<br />
 |Zien praoties bint niks weerd
 |-
 |Der nie achter '''dale''' komen<br />
