--- a/Nedersaksisch_P.mw
+++ b/Nedersaksisch_P.mw
@@ -99,7 +99,7 @@ In 't Nedersaksisch bin de benamingen veur de geslachsdelen vake een bietjen ''g
 **''ventiel{{small()|leke}}''
 **''gerei''
 **''(nacht)gewear''
-**''nachtbuks, puddingbuks
+**''nachtbuks, puddingbuks''
 **''peard''
 **''leuter''
 **''zwans'' (ook as skeeldwoard)
@@ -453,7 +453,7 @@ In 't Nedersaksisch bin de benamingen veur de geslachsdelen vake een bietjen ''g
 ==Puist==
 *[[Nederlands]]: ''puist''
 
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''vinne''
 **''poeste'' (ok bi-jname gemeentehuus 'n Arnbarg)
 
