--- a/Nedersaksisch_K.mw
+++ b/Nedersaksisch_K.mw
@@ -250,7 +250,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit K begunt''' oet 't [[Neders
 **''kind'' (mv. ''kinder'')
 **''kiend'' ([[Westerkertiers|WEK]], [[Hoogelaandsters|HGL]]; mv. ''kiender''), 
 **''grom'' 
-**''kwoajong'' (allend bie jongen, ol kirrels zeggen voak "Dou ik n kwoajong was...'' = ''toen ik kind (klein) was'')
+**''kwoajong'' (allend bie jongen, ol kirrels zeggen voak ''Dou ik n kwoajong was...'' = ''toen ik kind (klein) was'')
 **''jong'' (voak broekt ien meervold veur n groep)
 **''lutje/leutje'' (voak broekt ien meervold veur n groep)
 * [[Sallaans]]: ...
@@ -381,7 +381,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit K begunt''' oet 't [[Neders
 *[[Nederlands]]: ''klomp''
 
 *[[Achterhooks]]: 
-**'kloompe'', mv klumpe, klompen, vkw klumpken
+**''kloompe'', mv klumpe, klompen, vkw klumpken
 **''peppel'' (leterlik: populier), mv peppels
 *[[Drèents]]: ''klomp{{small()|e}}''
 *[[Grönnegs]]:
@@ -463,7 +463,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit K begunt''' oet 't [[Neders
 *[[Veluws]]: 
 **''koe'' (meervoud: ''koen{{small()|en}}'')
 **'''''[[ko]]''''' (meervoud: ''konen'')
-**''koeie'' ([[Elspeet]], meervoud: koenen'')
+**''koeie'' ([[Elspeet]], meervoud: ''koenen'')
 **''kuusje{{small()|n}}''
 
 ==Koelkast==
@@ -488,7 +488,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit K begunt''' oet 't [[Neders
 *[[Achterhooks]]: ''knien(tjen/ken)'', mv ''kniene''
 * [[Drèents]]: ''knien''
 * [[Grunnegs]]: ''knien{{small()|e}}'', ''kanien{{small()|e}}''
-*[[Sallaans]]: knien (sprekt uut: ''knîê')
+*[[Sallaans]]: knien (sprekt uut: ''knîê'')
 *[[Stellingwarfs]]: ''knien{{small()|e}}''
 * [[Tweants]]: ''knien''
 *[[Urkers]]: ...
@@ -508,7 +508,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit K begunt''' oet 't [[Neders
 *[[Stellingwarfs]]: ...
 *[[Tweants]]: ...
 *[[Urkers]]: ...
-*[[Veluws]]: ''koolraap'', ''-raop'', -'rääp''
+*[[Veluws]]: ''koolraap'', ''-raop'', ''-rääp''
 
 ==Kopen==
 *[[Nederlands]]:
@@ -661,7 +661,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit K begunt''' oet 't [[Neders
 *[[Urkers]]: ''kreuzebullem''
 *[[Veluws]]: 
 **'''''[[knoepbees]]'''''
-**''stek{{small()|k}}e{{small()|l}}beze, -bieze, -bèze
+**''stek{{small()|k}}e{{small()|l}}beze, -bieze, -bèze''
 **''stik{{small()|ke}}bèze'' ([[Klanenbeek]], [[Apeldoorne (stad)|Apeldoorne]])
 **''knoeper{{small()|d}}''
 **''klapbees'', ([[Niekark]]), ''-bèze'' ([[Apeldoorne (stad)|Apeldoorne]])
