--- a/Nedersaksisch_J.mw
+++ b/Nedersaksisch_J.mw
@@ -36,7 +36,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit J begunt''' oet 't [[Neders
 *[[Grönnegs]]:
 **''doe''
 **''dou'' ([[Stadjeders|STD]])
-*[[Oostfreisk]]'':
+*[[Oostfreisk]]:
 **''doe'' (Platduutske skriefwies ''du'')
 **''ji''
 *[[Sallaans]]: ''iej(e)''
