--- a/Algerye.mw
+++ b/Algerye.mw
@@ -1,14 +1,14 @@
 {{Laandtabel-twd
-| naaminlaandssproak = Demokratiske Volksrepublik Algerye<br>
-الجمهورية الجزائرية الديمقراطية الشعبية ([[arabisk]])<br>
-al-Jumhūriyya al-Jazāʾiriyya ad-Dīmuqrāṭiyya aš-Šaʿbiyya<br>
+| naaminlaandssproak = Demokratiske Volksrepublik Algerye</br>
+الجمهورية الجزائرية الديمقراطية الشعبية ([[arabisk]])</br>
+al-Jumhūriyya al-Jazāʾiriyya ad-Dīmuqrāṭiyya aš-Šaʿbiyya</br>
 République algérienne démocratique et populaire  ([[Fraans|fransk)
 | vlagge =  Flag_of_Algeria.svg
 | vlagartikel = Vlagge van Algerye
 | woapn = Emblem_of_Algeria.svg
 | woapnartikel = 
 | lokasie = Algeria_%28centered_orthographic_projection%29.svg
-| sproaken = [[arabisk]]k (officieel), [[berber]] (officieel), [[fraans|fransk]]
+| sproaken = [[arabisk]] (officieel), [[berber]] (officieel), [[fraans|fransk]]
 | heufdstad = [[Algiers]]
 | geleuf = [[islam]]
 | regeringsvörm = [[Republiek|republik]]
@@ -16,14 +16,15 @@ République algérienne démocratique et populaire  ([[Fraans|fransk)
 | km2 = 2.381.741
 | breedtegroad = 36/42//N 
 | lengtegroad = 3/13//E
-| region = 	DZ
+| region = DZ
 | pctwater = 1,1
-| munteenheid = [[Algerynsken dinar]]  | valutakode = (DZD)
+| munteenheid = [[Algerynsken dinar]] | valutakode = (DZD)
 | tiedzone = UTC+1 (CET))
 | volksleed = [[Kassaman]] ("Wy sweyret")
 | feestdag =
-| tld = dz<br>الجزائر. | laandkode = DZ | tel = 213 
+| tld = dz</br>الجزائر. | laandkode = DZ | tel = 213 
 |}}
+
 '''Algerye''', officieel de '''Demokratiske Volksrepublik Algerye''' is en land in de [[Maghreb]]-streake van [[Afrika|Noordafrika]]. Wat uppervlak angeyt is et et gröätste land van Afrika en de arabiske wearld. Et grenset in et noordousten an [[Tunesie]], up et ousten an [[Libie]], up et süüdousten an [[Niger]], up et süüdwesten an [[Mali]], [[Mauritanie]] en de [[Westelike Sahara]], up et westen an [[Marokko]] en up et noorden an de [[Middellandse Zee|Middellandsken Sey]]. Et land is halvverdröygd. Et meyste volk woant in et vrüchtbåre noorden. Et süden van et land ligt vöär en grout deyl in de [[Sahara]]. In Algerye woanet 44 miljoon lüde up ne uppervlakde van 2.381.741 kilometer in et veerkant. De gröätste stad is höyvdstad [[Algiers]], wat by de middellandske sey an de küste ligt.
 
 Vöär 1962 was Algerye et land van vöäle keiserryken en heyrskers, wåründer de [[numidianen]]. [[feniciers]], [[kartagenen]], [[Romeinse Riek|romeinen]], [[vandalen]], [[Bysantynske Ryk|bysantynen]], [[umayyaden]], [[abbasiden]], [[rustamiden]], [[idrisiden]], [[aghlabiden]], [[fatimiden]], [[ziriden]], [[hammadiden]], [[almoraviden]], [[almohaden]], [[zayyaniden]], [[Spanje|spanjaarden]], [[Ottomaanske Ryk|ottomanen]] en uuteandelik et [[Frankryk|franske koloniale ryk]]. et grötste deyl van de inwoaners is [[berber (volk)|berber]] en [[islam|islamitisk]]. De officiele språken van et land sind [[arabisk]] en [[berber (språke)|berber]]. In administrative saken en underwys is et [[Fraans|fransk]] in bruuk. De meystspröäkene språke is [[Algerynsk arabisk]].
